--- a/files/m___cj_one/styles.css
+++ b/files/m___cj_one/styles.css
@@ -12,7 +12,7 @@
   position:absolute;
   z-index:0;
 }
-#u154_img {
+#u156_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -20,7 +20,7 @@
   width:1280px;
   height:952px;
 }
-#u154 {
+#u156 {
   border-width:0px;
   position:absolute;
   left:1px;
@@ -28,7 +28,7 @@
   width:1280px;
   height:952px;
 }
-#u154_text {
+#u156_text {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -37,7 +37,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u155_img {
+#u157_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -45,7 +45,7 @@
   width:735px;
   height:333px;
 }
-#u155 {
+#u157 {
   border-width:0px;
   position:absolute;
   left:409px;
@@ -53,7 +53,7 @@
   width:735px;
   height:333px;
 }
-#u155_text {
+#u157_text {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -62,7 +62,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u156_img {
+#u158_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -70,7 +70,7 @@
   width:115px;
   height:18px;
 }
-#u156 {
+#u158 {
   border-width:0px;
   position:absolute;
   left:654px;
@@ -82,7 +82,7 @@
   font-style:normal;
   font-size:12px;
 }
-#u156_text {
+#u158_text {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -90,7 +90,7 @@
   width:111px;
   white-space:nowrap;
 }
-#u157_img {
+#u159_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -98,7 +98,7 @@
   width:167px;
   height:18px;
 }
-#u157 {
+#u159 {
   border-width:0px;
   position:absolute;
   left:629px;
@@ -110,7 +110,7 @@
   font-style:normal;
   font-size:12px;
 }
-#u157_text {
+#u159_text {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -118,7 +118,7 @@
   width:163px;
   white-space:nowrap;
 }
-#u158_img {
+#u160_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -126,7 +126,7 @@
   width:169px;
   height:18px;
 }
-#u158 {
+#u160 {
   border-width:0px;
   position:absolute;
   left:627px;
@@ -138,7 +138,7 @@
   font-style:normal;
   font-size:12px;
 }
-#u158_text {
+#u160_text {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -146,7 +146,7 @@
   width:165px;
   white-space:nowrap;
 }
-#u159_img {
+#u161_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -154,7 +154,7 @@
   width:169px;
   height:18px;
 }
-#u159 {
+#u161 {
   border-width:0px;
   position:absolute;
   left:627px;
@@ -166,7 +166,7 @@
   font-style:normal;
   font-size:12px;
 }
-#u159_text {
+#u161_text {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -174,7 +174,7 @@
   width:165px;
   word-wrap:break-word;
 }
-#u160_img {
+#u162_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -182,7 +182,7 @@
   width:724px;
   height:88px;
 }
-#u160 {
+#u162 {
   border-width:0px;
   position:absolute;
   left:420px;
@@ -190,7 +190,7 @@
   width:724px;
   height:88px;
 }
-#u160_text {
+#u162_text {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -199,7 +199,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u161_div {
+#u163_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -207,25 +207,27 @@
   width:301px;
   height:131px;
   background:inherit;
-  background-color:rgba(255, 255, 255, 0);
+  background-color:rgba(153, 51, 153, 0.498039215686275);
   box-sizing:border-box;
   border-width:1px;
   border-style:solid;
-  border-color:rgba(255, 0, 0, 1);
+  border-color:rgba(128, 0, 128, 1);
   border-radius:0px;
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
+  color:#FFFFFF;
 }
-#u161 {
+#u163 {
   border-width:0px;
   position:absolute;
   left:556px;
   top:562px;
   width:301px;
   height:131px;
+  color:#FFFFFF;
 }
-#u161_text {
+#u163_text {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -234,7 +236,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u162_div {
+#u164_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -242,18 +244,18 @@
   width:41px;
   height:20px;
   background:inherit;
-  background-color:rgba(255, 0, 0, 1);
+  background-color:rgba(153, 51, 153, 1);
   box-sizing:border-box;
   border-width:1px;
   border-style:solid;
-  border-color:rgba(255, 255, 255, 1);
+  border-color:rgba(128, 0, 128, 1);
   border-radius:0px;
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
   color:#FFFFFF;
 }
-#u162 {
+#u164 {
   border-width:0px;
   position:absolute;
   left:829px;
@@ -262,7 +264,7 @@
   height:20px;
   color:#FFFFFF;
 }
-#u162_text {
+#u164_text {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -270,7 +272,7 @@
   width:37px;
   white-space:nowrap;
 }
-#u162_ann {
+#u164_ann {
   border-width:0px;
   position:absolute;
   left:863px;
@@ -278,7 +280,7 @@
   width:1px;
   height:1px;
 }
-#u163_img {
+#u165_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -286,7 +288,7 @@
   width:135px;
   height:31px;
 }
-#u163 {
+#u165 {
   border-width:0px;
   position:absolute;
   left:561px;
@@ -298,7 +300,7 @@
   font-style:normal;
   font-size:12px;
 }
-#u163_text {
+#u165_text {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -306,12 +308,12 @@
   width:131px;
   word-wrap:break-word;
 }
-#u164_div {
+#u166_div {
   border-width:0px;
   position:absolute;
   left:0px;
   top:0px;
-  width:143px;
+  width:290px;
   height:40px;
   background:inherit;
   background-color:rgba(255, 255, 255, 0);
@@ -324,15 +326,15 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u164 {
+#u166 {
   border-width:0px;
   position:absolute;
-  left:558px;
+  left:414px;
   top:469px;
-  width:143px;
+  width:290px;
   height:40px;
 }
-#u164_text {
+#u166_text {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -341,11 +343,52 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u164_ann {
+#u166_ann {
   border-width:0px;
   position:absolute;
-  left:694px;
+  left:697px;
   top:465px;
   width:1px;
   height:1px;
+}
+#u167_div {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:105px;
+  height:16px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 0);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  font-family:'나눔고딕 Bold', '나눔고딕';
+  font-weight:600;
+  font-style:normal;
+  font-size:14px;
+  color:#800080;
+}
+#u167 {
+  border-width:0px;
+  position:absolute;
+  left:556px;
+  top:703px;
+  width:105px;
+  height:16px;
+  font-family:'나눔고딕 Bold', '나눔고딕';
+  font-weight:600;
+  font-style:normal;
+  font-size:14px;
+  color:#800080;
+}
+#u167_text {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:105px;
+  white-space:nowrap;
 }
